src/Grammar/.antlr/SidlParser.java
// Generated from c:\dev\workspaces\spa\Sidl\src\Grammar\SidlParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SidlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE=1, ARRAY=2, STRING=3, INT=4, FLOAT=5, BOOL=6, STRUCT=7, MESSAGE=8, 
		NODETYPE=9, NODE=10, META=11, FUNCTION=12, IMPORT=13, INCLUDE=14, PROPERTY=15, 
		TOPIC=16, INPUT=17, OUTPUT=18, NULL=19, TRUE=20, FALSE=21, IF=22, ELSE=23, 
		ELSEIF=24, FOR=25, IN=26, WHILE=27, RETURN=28, DOT=29, STAR=30, COMMA=31, 
		COLON=32, SEMI_COLON=33, ASSIGN=34, ADD=35, MINUS=36, DIV=37, ARROW=38, 
		OPEN_PAREN=39, CLOSE_PAREN=40, OPEN_BRACE=41, CLOSE_BRACE=42, OPEN_BRACKET=43, 
		CLOSE_BRACKET=44, NAME=45, WORD=46, STRINGLITEARL=47, NORMALSTRING=48, 
		CHARSTRING=49, LONGSTRING=50, INTEGER=51, FLOATINGPOINTNUMBER=52, WHITESPACE=53, 
		STMEND=54, COMMENT=55, LINECOMMENT=56, SHEBANG=57;
	public static final int
		RULE_root = 0, RULE_set = 1, RULE_statement = 2, RULE_scope = 3, RULE_type = 4, 
		RULE_atomictype = 5, RULE_complextype = 6, RULE_graphtype = 7, RULE_variable = 8, 
		RULE_typename = 9, RULE_variablelist = 10, RULE_typedvariablelist = 11, 
		RULE_expressionlist = 12, RULE_expression = 13, RULE_arraydeclaration = 14, 
		RULE_arrayaccess = 15, RULE_fieldaccess = 16, RULE_lefthandside = 17, 
		RULE_importstatement = 18, RULE_typealiasingstatement = 19, RULE_functiondefinition = 20, 
		RULE_functionbody = 21, RULE_returnstatement = 22, RULE_functioncall = 23, 
		RULE_structdefinition = 24, RULE_messagetypename = 25, RULE_nodetypename = 26, 
		RULE_messagetypelist = 27, RULE_messagedefinition = 28, RULE_nodetypedefinition = 29, 
		RULE_nodetypesignature = 30, RULE_nodedefinition = 31, RULE_nodebody = 32, 
		RULE_metadefinition = 33, RULE_number = 34, RULE_string = 35, RULE_terminator = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "set", "statement", "scope", "type", "atomictype", "complextype", 
			"graphtype", "variable", "typename", "variablelist", "typedvariablelist", 
			"expressionlist", "expression", "arraydeclaration", "arrayaccess", "fieldaccess", 
			"lefthandside", "importstatement", "typealiasingstatement", "functiondefinition", 
			"functionbody", "returnstatement", "functioncall", "structdefinition", 
			"messagetypename", "nodetypename", "messagetypelist", "messagedefinition", 
			"nodetypedefinition", "nodetypesignature", "nodedefinition", "nodebody", 
			"metadefinition", "number", "string", "terminator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'type'", "'[]'", "'string'", "'int'", "'float'", "'bool'", "'struct'", 
			"'message'", "'nodetype'", "'node'", "'meta'", "'function'", "'import'", 
			"'include'", "'property'", "'topic'", "'input'", "'output'", "'null'", 
			"'true'", "'false'", "'if'", "'else'", "'else if'", "'for'", "'in'", 
			"'while'", "'return'", "'.'", "'*'", "','", "':'", "';'", "'='", "'+'", 
			"'-'", "'/'", "'-->'", "'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE", "ARRAY", "STRING", "INT", "FLOAT", "BOOL", "STRUCT", "MESSAGE", 
			"NODETYPE", "NODE", "META", "FUNCTION", "IMPORT", "INCLUDE", "PROPERTY", 
			"TOPIC", "INPUT", "OUTPUT", "NULL", "TRUE", "FALSE", "IF", "ELSE", "ELSEIF", 
			"FOR", "IN", "WHILE", "RETURN", "DOT", "STAR", "COMMA", "COLON", "SEMI_COLON", 
			"ASSIGN", "ADD", "MINUS", "DIV", "ARROW", "OPEN_PAREN", "CLOSE_PAREN", 
			"OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "NAME", 
			"WORD", "STRINGLITEARL", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
			"INTEGER", "FLOATINGPOINTNUMBER", "WHITESPACE", "STMEND", "COMMENT", 
			"LINECOMMENT", "SHEBANG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SidlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SidlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SidlParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			set();
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE) | (1L << STRING) | (1L << INT) | (1L << FLOAT) | (1L << BOOL) | (1L << STRUCT) | (1L << MESSAGE) | (1L << NODETYPE) | (1L << NODE) | (1L << META) | (1L << IMPORT) | (1L << OPEN_BRACKET) | (1L << NAME) | (1L << STMEND))) != 0)) {
				{
				{
				setState(77);
				statement();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationStatementContext extends StatementContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariablelistContext variablelist() {
			return getRuleContext(VariablelistContext.class,0);
		}
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public DeclarationStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class TerminatorStatementContext extends StatementContext {
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public TerminatorStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StructdefinitionStatementContext extends StatementContext {
		public StructdefinitionContext structdefinition() {
			return getRuleContext(StructdefinitionContext.class,0);
		}
		public StructdefinitionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ImportStatementContext extends StatementContext {
		public ImportstatementContext importstatement() {
			return getRuleContext(ImportstatementContext.class,0);
		}
		public ImportStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class AssignmentStatementContext extends StatementContext {
		public VariablelistContext variablelist() {
			return getRuleContext(VariablelistContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(SidlParser.ASSIGN, 0); }
		public ExpressionlistContext expressionlist() {
			return getRuleContext(ExpressionlistContext.class,0);
		}
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public AssignmentStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class DefinitionStatementContext extends StatementContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariablelistContext variablelist() {
			return getRuleContext(VariablelistContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(SidlParser.ASSIGN, 0); }
		public ExpressionlistContext expressionlist() {
			return getRuleContext(ExpressionlistContext.class,0);
		}
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public DefinitionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class MessagedefinitionStatementContext extends StatementContext {
		public MessagedefinitionContext messagedefinition() {
			return getRuleContext(MessagedefinitionContext.class,0);
		}
		public MessagedefinitionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class NodetypedefinitionStatementContext extends StatementContext {
		public NodetypedefinitionContext nodetypedefinition() {
			return getRuleContext(NodetypedefinitionContext.class,0);
		}
		public NodetypedefinitionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class NodedefinitionStatementContext extends StatementContext {
		public NodedefinitionContext nodedefinition() {
			return getRuleContext(NodedefinitionContext.class,0);
		}
		public NodedefinitionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class MetadefinitionStatementContext extends StatementContext {
		public MetadefinitionContext metadefinition() {
			return getRuleContext(MetadefinitionContext.class,0);
		}
		public MetadefinitionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class TypealiasingStatementContext extends StatementContext {
		public TypealiasingstatementContext typealiasingstatement() {
			return getRuleContext(TypealiasingstatementContext.class,0);
		}
		public TypealiasingStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ScopeStatementContext extends StatementContext {
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public ScopeStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new TerminatorStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				terminator();
				}
				break;
			case 2:
				_localctx = new ScopeStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				scope();
				}
				break;
			case 3:
				_localctx = new DeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				type();
				setState(86);
				variablelist();
				setState(87);
				terminator();
				}
				break;
			case 4:
				_localctx = new AssignmentStatementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				variablelist();
				setState(90);
				match(ASSIGN);
				setState(91);
				expressionlist();
				setState(92);
				terminator();
				}
				break;
			case 5:
				_localctx = new DefinitionStatementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(94);
				type();
				setState(95);
				variablelist();
				setState(96);
				match(ASSIGN);
				setState(97);
				expressionlist();
				setState(98);
				terminator();
				}
				break;
			case 6:
				_localctx = new StructdefinitionStatementContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				structdefinition();
				}
				break;
			case 7:
				_localctx = new MessagedefinitionStatementContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(101);
				messagedefinition();
				}
				break;
			case 8:
				_localctx = new NodetypedefinitionStatementContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(102);
				nodetypedefinition();
				}
				break;
			case 9:
				_localctx = new NodedefinitionStatementContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(103);
				nodedefinition();
				}
				break;
			case 10:
				_localctx = new MetadefinitionStatementContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(104);
				metadefinition();
				}
				break;
			case 11:
				_localctx = new ImportStatementContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(105);
				importstatement();
				}
				break;
			case 12:
				_localctx = new TypealiasingStatementContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(106);
				typealiasingstatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(SidlParser.OPEN_BRACKET, 0); }
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(SidlParser.CLOSE_BRACKET, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_scope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(109);
				variable();
				}
			}

			setState(112);
			match(OPEN_BRACKET);
			setState(113);
			set();
			setState(114);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public AtomictypeContext atomictype() {
			return getRuleContext(AtomictypeContext.class,0);
		}
		public ComplextypeContext complextype() {
			return getRuleContext(ComplextypeContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(SidlParser.ARRAY, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				atomictype();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				complextype();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				atomictype();
				setState(119);
				match(ARRAY);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				complextype();
				setState(122);
				match(ARRAY);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomictypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(SidlParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(SidlParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(SidlParser.STRING, 0); }
		public TerminalNode BOOL() { return getToken(SidlParser.BOOL, 0); }
		public AtomictypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomictype; }
	}

	public final AtomictypeContext atomictype() throws RecognitionException {
		AtomictypeContext _localctx = new AtomictypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atomictype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << INT) | (1L << FLOAT) | (1L << BOOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplextypeContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(SidlParser.STRUCT, 0); }
		public ComplextypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complextype; }
	}

	public final ComplextypeContext complextype() throws RecognitionException {
		ComplextypeContext _localctx = new ComplextypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_complextype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(STRUCT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphtypeContext extends ParserRuleContext {
		public TerminalNode MESSAGE() { return getToken(SidlParser.MESSAGE, 0); }
		public TerminalNode NODETYPE() { return getToken(SidlParser.NODETYPE, 0); }
		public TerminalNode NODE() { return getToken(SidlParser.NODE, 0); }
		public TerminalNode META() { return getToken(SidlParser.META, 0); }
		public GraphtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphtype; }
	}

	public final GraphtypeContext graphtype() throws RecognitionException {
		GraphtypeContext _localctx = new GraphtypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_graphtype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MESSAGE) | (1L << NODETYPE) | (1L << NODE) | (1L << META))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SidlParser.NAME, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypenameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SidlParser.NAME, 0); }
		public TypenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typename; }
	}

	public final TypenameContext typename() throws RecognitionException {
		TypenameContext _localctx = new TypenameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablelistContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SidlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SidlParser.COMMA, i);
		}
		public VariablelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablelist; }
	}

	public final VariablelistContext variablelist() throws RecognitionException {
		VariablelistContext _localctx = new VariablelistContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variablelist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			variable();
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(137);
				match(COMMA);
				setState(138);
				variable();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedvariablelistContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SidlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SidlParser.COMMA, i);
		}
		public TypedvariablelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedvariablelist; }
	}

	public final TypedvariablelistContext typedvariablelist() throws RecognitionException {
		TypedvariablelistContext _localctx = new TypedvariablelistContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_typedvariablelist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			type();
			setState(145);
			variable();
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(146);
				match(COMMA);
				setState(147);
				type();
				setState(148);
				variable();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionlistContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SidlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SidlParser.COMMA, i);
		}
		public ExpressionlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionlist; }
	}

	public final ExpressionlistContext expressionlist() throws RecognitionException {
		ExpressionlistContext _localctx = new ExpressionlistContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expressionlist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			expression();
			setState(160);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(156);
					match(COMMA);
					setState(157);
					expression();
					}
					} 
				}
				setState(162);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
